# CoTransFold

./: .gitignore  pyproject.toml
data/benchmark_results/: benchmark_opt_20260327_092121_20260327_092440.json  benchmark_opt_20260327_092941_20260327_093300.json  benchmark_opt_20260327_093450_20260327_093744.json  benchmark_opt_20260327_093744_20260327_094037.json  benchmark_opt_20260327_094137_20260327_094421.json  benchmark_opt_20260327_094539_20260327_094852.json  benchmark_opt_20260327_095011_20260327_095313.json  benchmark_opt_20260327_095521_20260327_095846.json  benchmark_opt_20260327_095957_20260327_100259.json  benchmark_opt_20260327_100329_20260327_100651.json  benchmark_opt_20260327_100727_20260327_101028.json  benchmark_opt_20260327_101147_20260327_101443.json  benchmark_opt_20260327_101520_20260327_101752.json  benchmark_opt_20260327_101806_20260327_102121.json  benchmark_opt_20260327_102133_20260327_102413.json  benchmark_opt_20260327_102424_20260327_102704.json  benchmark_opt_20260327_102721_20260327_103035.json  benchmark_opt_20260327_103120_20260327_103437.json  benchmark_opt_20260327_103438_20260327_103753.json  benchmark_opt_20260327_143701_20260327_143952.json  benchmark_opt_20260327_143952_20260327_144302.json  benchmark_opt_20260327_215544_20260327_215903.json  benchmark_v0.3.0_20260327_084405.json  (+23 more)
research/: 00_RESEARCH_SYNTHESIS.md  01_CO_TRANSLATIONAL_FOLDING.md  01_RIBOSOME_EXIT_TUNNEL_DEEP_DIVE.md  02_RIBOSOME_AWARE_FOLDING_THESIS.md  03_BENCHMARK_BASELINE.md
scripts/: benchmark.py  optimize_loop.py  run_benchmark.py  run_simulation.py
(+72 files in other folders)
